<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- XiaoxinParts -->
    <string name="device_settings_title">XiaoxinParts</string>
    <string name="device_settings_summary">Device specific settings</string>
    <string name="category_power">Power</string>
    <string name="category_others">Others</string>

    <!-- Wakeup settings -->
    <string name="wakeup_settings_title">Wake up configuration</string>
    <string name="wakeup_settings_summary">Control the method of waking up the device</string>
    <string name="wakeup_title">Wake Up Settings</string>
    <string name="lid_behavior_title">Allow lid control sleep</string>
    <string name="lid_behavior_summary">Allows the device to detect the open or closed state of the lid to wake or put the device to sleep</string>
    <string name="double_tap_wake_title">Double tap to wake</string>
    <string name="double_tap_wake_summary">Double-tap the screen to wake the device when the screen is off</string>

    <!-- AudioEffects settings -->
    <string name="audioeffects_title">Dolby Atmos™</string>
    <string name="audioeffects_summary">Audio Effects</string>
</resources>
